fix(input): hide input password icon on IE

--- a/packages/oui-input/_normalize.less
+++ b/packages/oui-input/_normalize.less
@@ -4,7 +4,8 @@
   .input-normalize() {
     #oui > .base-font();
 
-    &::-ms-clear {
+    &::-ms-clear,
+    &::-ms-reveal {
       display: none;
     }
   }
